* Aug 6, 2009 *
* JPEG quality control finalized across processors (although CoreImage applies it in a rather fuzzy-logic way), with tests.

* Aug 4, 2009 *
* Supports the :aspect/'!' geometry flag in all processors
  (thanks to http://www.deepcalm.com/writing/cropped-thumbnails-in-attachment_fu-using-imagescience)
* JPEG quality control on thumbnailing/resizing (still buggy on Rmagick/MiniMagick though).
* Moves from GIF to PNG regardless of the source file extension's case (used to require lowercase)
* Auto-orients image (if EXIF suggests it) prior to processing with RMagickProcessor
* Fixes non-image upload tests (both regular files and Merb files)
* Fixes obsolete failures on RMagick tests (aspect_ratio tested but not initialized anymore due to new callback architecture

* Apr 17 2008 *
* amazon_s3.yml is now passed through ERB before being passed to AWS::S3 [François Beausoleil]

* Mar 22 2008 *
* Some tweaks to support Rails 2.0 and Rails 2.1 due to ActiveSupport::Callback changes.  
  Thanks to http://blog.methodmissing.com/2008/1/19/edge-callback-refactorings-attachment_fu/

* Feb. 26, 2008 *
* remove breakpoint from test_helper, makes test suite crazy (at least Rails 2+) [Rob Sanheim]
* make S3 test really optional [Rob Sanheim]

* Nov 27, 2007 *
* Handle properly ImageScience thumbnails resized from a gif file [Matt Aimonetti]
* Save thumbnails file size properly when using ImageScience [Matt Aimonetti]
* fixed s3 config file loading with latest versions of Rails [Matt Aimonetti]

* April 2, 2007 *

* don't copy the #full_filename to the default #temp_paths array if it doesn't exist
* add default ID partitioning for attachments
* add #binmode call to Tempfile (note: ruby should be doing this!) [Eric Beland]
* Check for current type of :thumbnails option.
* allow customization of the S3 configuration file path with the :s3_config_path option.
* Don't try to remove thumbnails if there aren't any.  Closes #3 [ben stiglitz]

* BC * (before changelog)
