@@ -47,7 +47,9 @@ has_attachment(options = {})
                           # This option need only be included if you want thumbnailing.
                           # If you have a polymorphic parent relationship, you can provide parent-type-specific
                           # thumbnail settings by using a pair with the type string as key and a Hash of thumbnail
-                          # definitions as value.
+                          # definitions, or a method symbol, as value. The method symbol will call the named
+                          # method in order to get a dynamically-built Hash of thumbnail definitions, which gives
+                          # you full flexibility.
                           # AttachmentFu automatically detects your first polymorphic +belongs_to+ relationship.
                           #
     :thumbnail_class      # Set which model class to use for thumbnails.
